# Aaron-Solana-Q1-2023

./: about.md  resources.md
Captsone/: README.md
Cluster 1/Code Challenge/src/: error.rs  instruction.rs  processor.rs  state.rs
Cluster 1/Journals/: code-journal-1.rs  code-journal-2-.rs
Cluster 2/Code Challenge/deposit/: Anchor.toml  NOTES.md
Cluster 2/Code Challenge/deposit/programs/deposit/: Cargo.toml
Cluster 2/Code Challenge/deposit/tests/: deposit.ts
Cluster 2/Code Challenge/escrow/: Anchor.toml
Cluster 2/Code Journals/: journal1.rs  journal2.rs
Cluster 3/: NativeVsAnchor.md
Cluster 3/Coding Challenge/depositplus/: Anchor.toml
Cluster 3/Coding Challenge/depositplus/tests/: depositplus.ts
Cluster 3/bootstrap-template/: Anchor.toml  README.md
Cluster 3/bootstrap-template/programs/bootstrap-template/: Cargo.toml
Cluster 3/bootstrap-template/programs/bootstrap-template/src/: id.rs  lib.rs
Cluster 3/bootstrap-template/programs/bootstrap-template/src/instructions/: init.rs
Cluster 3/bootstrap-template/programs/bootstrap-template/src/model/: error.rs
Cluster 3/bootstrap-template/tests/: bootstrap-template.ts
Prerequisites/paulx/: Cargo.toml  README.md  guide.md
Prerequisites/paulx/front-end/: layout.ts  package.json  test.ts
Prerequisites/paulx/src/: instruction.rs  lib.rs  state.rs
Prerequisites/rust-tut/: ref.md
Prerequisites/rust-tut/src/: arrays.rs  cli.rs  conditionals.rs  enums.rs  functions.rs  loops.rs  main.rs  pointer_ref.rs  print.rs  strings.rs  structs.rs  tuples.rs  types.rs  vars.rs  vectors.rs
(+6 files in other folders)
