[package]
name = "bootstrap-template"
version = "1.0.0"
description = "Created by amilz"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bootstrap_template"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = {version = "0.26.0", features = ["init-if-needed"]}
anchor-spl = "0.26.0"
solana-program = "=1.14.16"